# Black-Hole-Sim

./: .gitignore  CMakeLists.txt  DiskGenerator.py  README.md
shaders/: README.md  blackhole.frag  blur.frag  bright.frag  fullscreen.vert  post.frag
src/: Camera.cpp  Camera.h  Framebuffer.cpp  Framebuffer.h  README.md  Shader.cpp  Shader.h  main.cpp
